--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -1,3 +1,5 @@
-DE debian: 9,5-delgado ADD entrypoint.sh /entrypoint.sh
- RUN chmod + x /entrypoint.sh
- EntryPoint [ "/entrypoint.sh" ]
+FROM debian:9.5-slim
+
+ADD entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
